# gitirc-bot

./: .gitignore  CMakeLists.txt  README  gitirc-Process.w  gitirc-RSSreader.w  gitirc-bot.w  gitirc-check_config.w  gitirc-get_line_from_pipe.w  gitirc-get_refname.w  gitirc-get_sha1.w  gitirc-git_db.w  gitirc-git_process.w  gitirc-irc_ctx.w  gitirc-irc_id.w  gitirc-is_interesting_ref.w  gitirc-json.w  gitirc-logger.w  gitirc-read_configuration.w  gitirc-wget_process.w  gitirc-whitelist.w  gitircConfig.sh.in  rss-reader.w
